# GeometricAlgorithms

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  GeometryTypes.h  Segment.cpp  Segment.h  SortedSequence.h  SweepLine.cpp  SweepLine.h
source/test/: SegmentTest.cpp  SortedSequenceTest.cpp  SweepLineTest.cpp
